Karuna added changes

--- a/ui/website/src/allBlocks/AllBlogsBanner/AllBlogsBanner.css
+++ b/ui/website/src/allBlocks/AllBlogsBanner/AllBlogsBanner.css
@@ -7,6 +7,7 @@
     color: white;
     background-image: url("https://wealthyvia.s3.ap-south-1.amazonaws.com/website/ceo.png");
     background-size: 100% 100%;
+    margin-bottom: 100px;
 
 }
 .AllBlogsbannerWall img{
