--- a/ui/website/src/allBlocks/Upstream/Upstream.css
+++ b/ui/website/src/allBlocks/Upstream/Upstream.css
@@ -235,8 +235,8 @@
 
 .upstreamblock{
   height: 550px;
-  padding: 0px 100px;
-  /*margin-bottom:18px;*/
+  padding: 50px 100px;
+  margin-bottom:50px;
 
 
 }
