--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -17,6 +17,7 @@
     left: 18em;
     color: #009de2;
     font-weight: 600;
+    letter-spacing: 2px;
 }
 .downimgtext_new{
    /* position: absolute;
