--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -16,6 +16,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 .bw1{
     background-color: #bcd;
 }
+.alternateblock{
+    background-color: #f1f1f1c7;
+}
 
 .fs12{
     font-size: 12px;
