--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -23,6 +23,7 @@
   background-size: 100% 100% ;
   width: 100%;
   height: 48em;
+  margin-bottom: 50px ! important;
   background-image: url(/images/Banner3_.png);
 
 }
