--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -22,9 +22,9 @@
   text-align: justify;
   padding: 0px 20px;
   font-size: 11px;
-  height: 170px;
+  height: 135px;
   color:#000;
-  margin-top: 10px;
+  /*margin-top: 10px;*/
 
 }
 .blogdate{
@@ -42,6 +42,7 @@
   font-weight: 600;
   height: 50px;
   margin-top: 25px;
+  margin-bottom: 7px;
 
 }
 .blogtext {
@@ -55,7 +56,7 @@
 }
 
 .blogblock{
-  height: 500px ! important;
+  height: 465px ! important;
 	box-shadow: 0 10px 29px rgba(92,141,255,.22);
 	border-radius: 8px;
   padding:0px;
