--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -80,7 +80,7 @@
 
 .serflip-card-back p{
   letter-spacing: 0px;
-  font-size: 13px;
+  font-size: 14px;
 }
 .downstreamservicesblock{
 	  background-color: #fff;
@@ -119,9 +119,30 @@
 .contentheader h2{
   font-size: 42px;
   line-height: 55px;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 .contentheader hr{
+  height: 2px;
+  width: 95px;
+  border: 1px solid #f19000;
+  background-color: #f19000;
+  /*margin-bottom: 39px;*/
+}
+.contentheadernew{
+  /*margin-bottom:120px;*/
+}
+.contentheadernew h1{
+    font-size: 30px;
+    line-height: 20px;
+    font-weight: 700;
+    letter-spacing: -.4px;
+}
+.contentheadernew h2{
+  font-size: 30px;
+  line-height: 55px;
+  letter-spacing: 2px;
+}
+.contentheadernew hr{
   height: 2px;
   width: 95px;
   border: 1px solid #f19000;
