--- a/ui/website/src/allBlocks/Downstream/Downstream.css
+++ b/ui/website/src/allBlocks/Downstream/Downstream.css
@@ -54,7 +54,7 @@
 .contentheader h2{
   font-size: 42px;
   line-height: 55px;
-  letter-spacing: -1px;
+  letter-spacing: 2px;
 }
 .contentheader hr{
   height: 2px;
@@ -62,6 +62,13 @@
   border: 1px solid #f19000;
   background-color: #f19000;
   /*margin-bottom: 39px;*/
+}
+.contentheaderNewPage hr{
+   height: 2px;
+  width: 95px;
+  border: 1px solid #f19000;
+  background-color: #f19000;
+
 }
 
 .contentheader1 h1{
