--- a/ui/website/src/blockTemplate/News_Events/News_Events.css
+++ b/ui/website/src/blockTemplate/News_Events/News_Events.css
@@ -39,7 +39,7 @@
     box-shadow: -3px 1px 6px 5px #f3f3f3;
     width: 63px;
     height: 47px;
-    padding-left:7px;
+    padding-left:5px;
     padding-top: 3px;
 
     /*margin-right: 15px;*/
@@ -48,7 +48,7 @@
 }
 .maindivNews{
   margin-top: 25px;
-  min-height: 400px;
+  min-height: 325px;
 }
 .newsheading{
   font-weight: 700;
@@ -60,4 +60,8 @@
 .eventdesc{
   padding-top: 20px;
   font-size: 17px;
+}
+.NwesBoxShadow{
+  box-shadow: 0px 0px 5px 0px #b7a7a7;
+  height: 330px;
 }
