Karuna added changes

--- a/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
+++ b/ui/website/src/blockTemplate/TemplateOverview/TemplateOverview.css
@@ -31,9 +31,9 @@
     text-align: justify;
 }
 .B2T_overviewTxt{
-	height: 260px;
+/*	height: 260px;
 	width:  414px;
-  padding-left: 130px;
+  padding-left: 130px;*/
 }
 .B2T_btn{
  position: absolute;
