--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -15,7 +15,7 @@
 	  position: absolute;
     top: 5em;
     left: 18em;
-    color: #009de2;
+    color: #333;
     font-weight: 600;
     letter-spacing: 2px;
 }
