--- a/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
+++ b/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
@@ -8,11 +8,15 @@
 
 }
 .righttextaboutus{
-	margin-top: 45px;
+	padding-top: 105px;
 	font-size: 17px ! important;
 }
 .energypagedata{
 	font-size: 17px;
+	text-align: justify;
+}
+.intro_img{
+  width: 100%
 }
 /*.onselecthover:hover{
   cursor: pointer;
