--- a/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
@@ -12,5 +12,9 @@
     /*margin-top: 40px;*/
 }
 .typebtn_img{
-	padding-top: 44px;
+	padding-top: 10px;
+}
+.righttextaboutus{
+    font-size: 17px;
+    text-align: justify;
 }
