Karuna added changes

--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -57,7 +57,7 @@
 
 .blogblock{
   height: 465px ! important;
-	box-shadow: 0 10px 29px rgba(92,141,255,.22);
+	box-shadow: 0px -2px 12px 0px #d6d0d0;
 	border-radius: 8px;
   padding:0px;
 
