--- a/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
@@ -87,6 +87,7 @@
     margin-bottom: 50px;
     padding: 87px 22px 47px;
     height: 300px;
+    font-weight: 600;
 }
 .serflip-card img{
   height: 130px;
