--- a/ui/website/src/blockTemplate/News_Events/News_Events.css
+++ b/ui/website/src/blockTemplate/News_Events/News_Events.css
@@ -36,15 +36,13 @@
     font-weight: 600;
 }
 .yearbox{
-    box-shadow: -3px 1px 6px 5px #f3f3f3;
-    width: 63px;
+    box-shadow: 0px 0px 6px 4px #a99b9b;
+    width: 60px;
     height: 47px;
-    padding-left:5px;
+    padding-left:15px;
     padding-top: 3px;
-
-    /*margin-right: 15px;*/
-
-    color:#009de2;
+    margin-right: 45px;
+    color:#333;
 }
 .maindivNews{
   margin-top: 25px;
@@ -58,10 +56,11 @@
   height: 200px;
 }
 .eventdesc{
-  padding-top: 20px;
+  padding: 20px;
   font-size: 17px;
 }
 .NwesBoxShadow{
   box-shadow: 0px 0px 5px 0px #b7a7a7;
-  height: 330px;
+  height: 375px;
+  border-radius: 7px;
 }
