--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -81,6 +81,7 @@
 .serflip-card-back p{
   letter-spacing: 0px;
   font-size: 14px;
+  font-weight: 600;
 }
 .downstreamservicesblock{
 	  background-color: #fff;
