--- a/ui/website/src/blockTemplate/Aboutustextright/Aboutusimgright.css
+++ b/ui/website/src/blockTemplate/Aboutustextright/Aboutusimgright.css
@@ -6,3 +6,14 @@
     margin-left: 52px;
     font-size: 18px;
 }
+.line3{
+	background-color: #f08f00;
+    width: 90px;
+    height: 4px;
+    margin-top: 40px;
+    margin-left: 32px;
+}
+.About5block{
+    height: 400px;
+    padding-top: 50px;
+}
