--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -88,6 +88,7 @@
 .serflip-card-back p{
   letter-spacing: 0px;
   font-size: 15px;
+  font-weight: 600;
 }
 .downstreamservicesblock{
 	  background-color: #fff;
