--- a/ui/website/src/blockTemplate/TemplateBanner/TemplateBanner.css
+++ b/ui/website/src/blockTemplate/TemplateBanner/TemplateBanner.css
@@ -10,12 +10,12 @@
   .innerBlocktepmlate{
   	height: auto;
   }
-  .BT1_img{
+ /* .BT1_img{
   	height: 200px;
   	width: 100%;
   	margin-top: 140px;
 
-  }
+  }*/
   .BT1_bannerTitle{
   	position: absolute;
   	color: #fff;
