--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -12,8 +12,8 @@
   position: absolute;
   right: 0px;
   background-color: #f19000;
-  width: 35px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   color: #fff;
   padding: 6px 8px 6px 6px ;
   border-radius: 3px;
@@ -24,6 +24,10 @@
   border: none;
   z-index: 100000;
   top:70px;
+}
+.envelopeIcon{
+  padding-right: 3px;
+  color: #fff;
 }
 .NopaddingToA{
   padding: 0px ! important;
@@ -71,7 +75,7 @@
   cursor: pointer;
   color: #fff;
   width : 100px;
-  right: 5px;
+  /*right: 5px;*/
   display: none;
 }
 
@@ -365,7 +369,7 @@
 }
 .columnhead{
   /*line-height: 20px;*/
-  font-weight: 900 ! important;
+  font-weight: 700 ! important;
   font-size: 12px ! important;
   text-align: center;
   color: #333 ! important;
@@ -393,8 +397,8 @@
   position: absolute;
   right: 0px;
   background-color: #f19000;
-  width: 35px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   color: #fff;
   padding: 6px 8px 6px 6px ;
   border-radius: 3px;
@@ -476,8 +480,8 @@ body { top: 0px !important; }
 .ct-topbar {
   text-align: right;
   position: absolute;
-  right: 54px;
-  bottom: 62px;
+  right: -31px;
+  bottom: 50px;
   height: 20px;
   /*background: #eee;*/
 }
@@ -566,7 +570,13 @@ border:1px solid #eee ! important;
     top: 4px;
     z-index: 3000;
 }
+.topnav a >.active {
+    color:red;
+    }
 
+  .Currentactivetab{
+    color:orange ! important;
+  }
 
 
 
