Karuna added changes

--- a/ui/website/src/allBlocks/Journycaro/Journycaro.css
+++ b/ui/website/src/allBlocks/Journycaro/Journycaro.css
@@ -9,16 +9,17 @@
 }
 
 .webclientbackimg{
-    color: #000;
+    color: #333;
     font-size: 15px;
-    box-shadow: 0 10px 29px rgba(92,141,255,.22);
+    font-weight: 500;
+    /*box-shadow: 0 10px 29px rgba(92,141,255,.22);*/
     border-radius: 8px;
     width: 677px;
 }
 
 
 .webclientcaro h3{
-  text-align: left;
+  /*text-align: left;*/
   font-weight: bold;
 }
 .webclientcaro{
