--- a/ui/website/src/blockTemplate/DescBgImage/DescBgImage.css
+++ b/ui/website/src/blockTemplate/DescBgImage/DescBgImage.css
@@ -453,7 +453,7 @@ margin-top: 100px;
 }
 
 
-.servicekbtn{
+/*.servicekbtn{
    color: #fff;
     margin-top: 15px;
     width: 100%;
@@ -462,7 +462,7 @@ margin-top: 100px;
     padding: 10px;
     border-radius: 40px;
     font-size: 14px;
-}
+}*/
 .servicekbtnarrow{
     color: #fff;
     font-weight: 600;
