--- a/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
+++ b/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
@@ -23,6 +23,9 @@
   float: left;
   margin-bottom: 0px ! important;
 }
+.typecomp1DIV1{
+  padding-top: 64px;
+}
 /*.onselecthover:hover{
   cursor: pointer;
   border: 1px solid #aaa;
