--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -32,6 +32,7 @@
   padding: 10px 20px;
   font-size: 13px;
   margin-top: -16px;
+  font-weight: 600;
 
 }
 .blogtext h4{
@@ -67,6 +68,7 @@
   	margin-top: -15px;
     /*border-radius: 20px;*/
     color: #fff;
+    font-weight: 600;
 }
 .blogbtn1:focus{
   outline: 0px auto -webkit-focus-ring-color!important;
