--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -540,7 +540,8 @@ margin-top: 100px;
     font-weight: 600;
     padding: 5px;
     border-radius: 40px;
-    font-size: 14px;
+    font-size: 15px;
+    padding: 12px;
 }
 .servicekbtnarrow{
     color: #fff;
