--- a/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
@@ -25,7 +25,10 @@
 	/*padding-top: 35px;*/
   overflow: hidden;
 }
-
+.CommonBlockSpacing{
+  margin-top: 30px;
+  margin-bottom: 70px;
+}
 .serflip-card {
     /*background-color: #fff;*/
     /*box-shadow: 0 10px 29px rgba(92,141,255,.22);*/
@@ -74,7 +77,7 @@
   color: white;
   transform: rotateY(180deg);
   border-radius: 15px;
-  padding: 50px 22px 47px; /*PB*/
+  padding: 22px 22px 47px; /*PB*/
 }
 
 .serflip-card-back p{
