--- a/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
+++ b/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
@@ -13,8 +13,17 @@
 }
 .BT3_text{
 	padding-top:20px;
-	font-size: 18px;
+	font-size: 17px;
 
+}
+.BT3_text_new{
+  padding-top:40px;
+  font-size: 17px;
+
+}
+.headingPadding{
+  padding-top: 10px;
+  margin-top: 20px;
 }
 
 .BT3_subhead{
@@ -31,13 +40,14 @@
     position: absolute;
     width: 80px;
     margin-left: 33%;
-    top: -21px;
+    top: -34px;
     background-color: #fff;
     border-radius: 50%;
+    box-shadow: 0px 0px 8px 3px #9b8f8f;
 }
 .endofsubblock{
   border-bottom: 5px solid #1e53e8;
-  height: 120px;
+  height: 140px;
 }
 .iconCircle img{
   margin-top: 20px;
@@ -45,7 +55,7 @@
 }
 .FirstPart{
   height: 70px;
-  background-color: #eeeeee54;
+  background-color: #eeeeeed4;
 }
 .BT4_txt {
     margin-top: 10px;
