--- a/ui/website/src/blockTemplate/News_Events/News_Events.css
+++ b/ui/website/src/blockTemplate/News_Events/News_Events.css
@@ -1,6 +1,7 @@
 .innerBlocktepmlate6{
 	height: auto;
   padding:0px;
+  margin-bottom: 50px;
 }
 .B3T_NewsDiv {
     /*top: 130px;*/
@@ -35,14 +36,32 @@
     font-size: 35px;
     font-weight: 600;
 }
+.eventImg{
+  height: 100%;
+}
+.EventIMageDiv{
+
+}
+.blogsimg1{
+  overflow: hidden;
+  /*width: 100%;*/
+  height: 200px;
+}
+.blogsimg1 img{
+  width: 100%;
+  /*height: 200px;*/
+}
+
 .yearbox{
-    box-shadow: 0px 0px 6px 4px #a99b9b;
+    box-shadow: 0px 0px 2px 3px #c2b9b9;
     width: 60px;
     height: 47px;
-    padding-left:15px;
-    padding-top: 3px;
+    padding-left:17px;
+    padding-top: 7px;
     margin-right: 45px;
+    font-size: 12px;
     color:#333;
+    border-radius: 3px;
 }
 .maindivNews{
   margin-top: 25px;
@@ -56,11 +75,17 @@
   height: 200px;
 }
 .eventdesc{
-  padding: 20px;
-  font-size: 17px;
+  padding: 16px;
+  font-size: 14px;
+  font-weight: 500;
 }
 .NwesBoxShadow{
   box-shadow: 0px 0px 5px 0px #b7a7a7;
-  height: 375px;
+  height: 325px;
   border-radius: 7px;
+  margin-bottom: 20px;
+}
+.eventImage{
+  height: 200px;
+  width: 300px;
 }
