--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -7,6 +7,19 @@
   
 
 }
+.Type2Img{
+  /*width  : 100%;
+  height : 85%;*/
+  padding:50px;
+
+}
+.type1btnDiv{
+  margin-bottom: 65px;
+}
+.takebuttonDown{
+      /*padding-top: 104px;*/
+    padding-left: 75px;
+}
 .line3{
 	background-color: #f08f00;
     width: 90px;
@@ -26,7 +39,7 @@
   color:#333; 
 }
 .Typecomponent1_btn{
-  margin-bottom: 25px;
+  margin-bottom: 50px;
 }
 .industries_imgDiv{
   /*margin-top: 75px;*/
